# organsequencer

./: CMakeLists.txt  README.md
.github/workflows/: juce-build.yml
labs/: EventLookup.ipynb
source/: MaxComponent.hpp  Model.hpp  PatternEditor.cpp  PatternEditor.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Sequencer.hpp  StepSequencer.hpp  layout.hpp  trace.h
source/ext/: JavascriptCodeTokeniser.cpp  JavascriptCodeTokeniser.h  value_tree_debugger.cpp  value_tree_debugger.h
